# phd-nova-zkml

./: .gitignore  .gitmodules  README.md
data/: example_images.json  mnist_DNN_model.keras  mnist_dnn_model_weights.json
data/circiut_inputs/: mnist_input1.json  mnist_input2.json  mnist_input7.json  mnist_input_10_10_dig4.json  mnist_input_10_56_dig4.json  mnist_input_20_10_dig4.json  mnist_input_2_10_dig4.json  mnist_input_2_20_dig4.json  mnist_input_2_56_dig4.json  mnist_input_4.json  mnist_input_4_10_dig4.json  mnist_input_5_56_dig4.json
models/: Post_QAT.py  circomLib_ml_full_Example.py  circomLib_ml_full_example_Eval.py  dnn_2_10_full_Example.py  dnn_L_10_full_Example.py  dnn_L_N_full_Example.py  dnn_full_Example.py  dnn_full_Example_Eval.py  mnist_circiut_API.py  mnist_dnn.py  mnist_dnn_circiut_input.py  mnist_dnn_store_Int_weights.py  mnist_dnn_store_weights.py  mnist_dnn_store_weights_int.py  mnist_inference_dnn.py  test.py
models/mnist_tflite_dnn/: mnist_dnn_QAT.py
sonobe_scheme/: Cargo.toml
sonobe_scheme/circuits/: backbone1_layer.circom  backbone2_layer.circom  backbone_dense.circom  backbone_dense_new_ver.circom  backbone_layer_dnn.circom  conv2_test.circom  head_layer.circom  input.json  input_layer.circom  is_zero.circom  mnist_circom_test.circom  package-lock.json  package.json  tail_layer.circom  with_external_inputs.circom
sonobe_scheme/src/: circom_full_flow.rs  circom_full_flow_org.rs  main.rs  memory_utils.rs  mnist_str.rs  network.rs
sonobe_scheme/src/solidity/: README.md
sonobe_scheme/src/solidity/script/: CallVerify.s.sol  DeployOnchainVerifier.s.sol
