[package]
name = "solidity-verifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-groth16 = "^0.5.0"
ark-bn254 = { version = "^0.5.0", default-features = false, features = ["r1cs"] }
ark-poly-commit = "^0.5.0"
ark-serialize = "^0.5.0"
askama = { version = "0.12.0", features = ["config"], default-features = false }
revm = {version="3.5.0", default-features=false, features=["std"]}
rust-crypto = "0.2"
num-bigint = "0.4.3"
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes"}
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
[dev-dependencies]
ark-ec = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "^0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = ["sponge", "parallel"] }
ark-snark = { version = "^0.5.0", default-features = false }
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-grumpkin = { version = "^0.5.0", default-features = false, features = ["r1cs"] }
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", features=["light-test"]}
experimental-frontends = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "experimental-frontends"}
solidity-verifiers = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "solidity-verifiers"}
noname = { git = "https://github.com/dmpierre/noname" }

[features]
default = ["parallel"]

parallel = [ 
    "ark-groth16/parallel", 
    "ark-poly-commit/parallel",  
    "folding-schemes/parallel",
]


[[example]]
name = "mnist_test"
path = "./src/mnist_test.rs"

[[example]]
name = "mnist_str"
path = "./src/mnist_str.rs"

[[example]]
name = "circom_full"
path = "./src/circom_full_flow.rs"